poll details page create

--- a/polls/templates/polls/vote.html
+++ b/polls/templates/polls/vote.html
@@ -30,6 +30,7 @@
             {% endfor %}
         <input type="submit" value="vote">
     </form>
+    <a href="{%url 'polls:detail'%}">vote details</a>
 
 </table>
 
