--- a/lectures/templates/lectures/base.html
+++ b/lectures/templates/lectures/base.html
@@ -45,6 +45,9 @@
                         <a class="nav-link" href="{%url 'users:logout'%}">Logout</a>
                       </li>
                       
+                      <li class="nav-item">
+                        <a class="nav-link" href="{%url 'polls:vote'%}">Vote</a>
+                      </li>
                          {%if user.is_superuser%}
                         <li class="nav-item">
                           <a class="nav-link" href="{% url 'users:register'%}">Add User</a>
