--- a/lectures/templates/lectures/base.html
+++ b/lectures/templates/lectures/base.html
@@ -8,10 +8,10 @@
     </head>
     <body>
         <div class="container">
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <nav class="navbar navbar-expand-lg navbar-light bg-light mb-5">
                 <div class="container-fluid">
                   {% if user.is_authenticated%}
-                  <a class="navbar-brand" href="#">
+                  <a class="navbar-brand" href="{%url 'users:profile'%}">
                      {%if user.is_superuser%}
                     
                           *{{user.username}}
@@ -37,10 +37,11 @@
                       </li>
                       
                        {% if user.is_authenticated%}
-                      <li>
-                        <a class="nav-link" href="{% url 'lectures:uploadLec' %}">Upload</a>
-                      </li>
-
+                        {%ifequal request.user.permissions 'uploader'%} 
+                          <li>
+                            <a class="nav-link" href="{% url 'lectures:uploadLec' %}">Upload</a>
+                          </li>
+                        {%endifequal%}
                       <li class="nav-item">
                         <a class="nav-link" href="{%url 'users:logout'%}">Logout</a>
                       </li>
