adding a simple toDoList app

--- a/lectures/templates/lectures/lessons.html
+++ b/lectures/templates/lectures/lessons.html
@@ -1,19 +1,19 @@
 {% extends 'lectures/base.html' %}
-{% block title %}Home{% endblock title %}
+{% block title %}lessons{% endblock title %}
 
 {% block content %}
 
 <p><b>{{lecture}} lectures</b></p>
 
 <table class="table">
-<tr class="table-primary">
+    <tr class="table-primary">
 
-<td class="table-primary">Title</td>
-<td class="table-primary">Link</td>
-<td class="table-primary">Uploaded</td>
+        <td class="table-primary">Title</td>
+        <td class="table-primary">Uploaded</td>
+        <td class="table-primary">Link</td>
 
-</tr>
 
+    </tr>
 
     {%for lesson in lessons%}
         <tr class="table-light">
@@ -22,8 +22,7 @@
             <td class="table-light">{{lesson.uploaded}}</td>
             <td class="table-light"><a href="/lectures{{lesson.upload.url}}" class='btn btn-primary btn-sm'>Open</a></td>
             
-
-            </tr>
+        </tr>
 
     {% endfor %}
 
