--- a/lectures/templates/lectures/upload.html
+++ b/lectures/templates/lectures/upload.html
@@ -1,6 +1,6 @@
 {% extends 'lectures/base.html' %}
 {% load crispy_forms_tags %}
-{% block title %}Home{% endblock title %}
+{% block title %}upload{% endblock title %}
 
 {% block content %}
 
